# DPR

./: .gitignore  WARP.md  test_.py
backend/: .dockerignore  .env.example  Dockerfile  README.md  SECRETS_SETUP.md  app.py  app.yaml  cloudbuild.yaml  deploy.sh  main.py  pyproject.toml  requirements.txt  setup_env_vars.sh  setup_secrets.sh  test.py
backend/sheet/: DPR.xlsx
backend/src/: config.py  prompt_builder.py
backend/utils/: logger.py
frontend/: .env.example  REFACTORING_SUMMARY.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  config.js  index.css
frontend/src/components/: AvailableSheetsSidebar.jsx  ChatHistorySidebar.jsx  ChatInterface.jsx  Dashboard.jsx  ErrorRecovery.jsx  Login.jsx  MobileChatInterface.jsx  Onboarding.jsx  SheetEditor.jsx  Sidebar.jsx  VisualFeedback.jsx
frontend/src/components/shared/: ChatMessage.jsx  Input.jsx  Navigation.jsx  UserProfile.jsx  index.js
frontend/src/hooks/: index.js  useUserManagement.js
frontend/src/services/: googleAuth.js
frontend/src/utils/: chatStorage.js  gestureDetector.js
